# selected-topics-in-programming

./: README.md
CalculatorAssignment/: calculator.hpp  test_calculator.cpp
Concurrency/include/: mtqueue.hpp  thread_pool.hpp
Concurrency/src/: CMakeLists.txt  futures.cpp  mtqueue.cpp  mtqueue_threadpool.cpp
ExamAssignment/: CMakeLists.txt  benchmark.cmake  main.cpp  notes to self.txt
ExamAssignment/benchmark/: CMakeLists.txt  SimulationBenchmarks.cpp  plot_results.py  results.csv
ExamAssignment/estimations/: CMakeLists.txt  EstimateMeans.cpp  EstimationsMain.cpp
ExamAssignment/latex/: figures.tex  listing.tex  master.tex
ExamAssignment/plots/: plot_simulations.bat  plot_simulations.py  seihr.csv  simple1.csv  simple2.csv  simple3.csv
ExamAssignment/src/: CMakeLists.txt  ParallelSimulationRunner.cpp  ParallelSimulationRunner.h  Reaction.cpp  Reaction.h  ReactionCompounds.cpp  ReactionCompounds.h  Simulation.cpp  Simulation.h  SimulationFileWriter.cpp  SimulationFileWriter.h  Species.cpp  Species.h  SymbolTable.hpp  ThreadPool.hpp
ExamAssignment/src/graphs/: CMakeLists.txt  ReactionNetworkDrawer.cpp  ReactionNetworkDrawer.h
ExamAssignment/src/networks/: CMakeLists.txt  CircadianOscillator.cpp  Seihr.cpp  Simple.cpp
ExamAssignment/tests/: CMakeLists.txt  ReactionTests.cpp  SymbolTableTests.cpp
JsonAssignment/include/: json_input.hpp  json_output.hpp  meta.hpp
JsonAssignment/src/: data.hpp  json_input_test.cpp  json_output_test.cpp  meta_test.cpp
Lambdas/src/: lambda-puzzle1.cpp  lambda-puzzle2.cpp  lambda-puzzle3.cpp
MoveSemantics/: CMakeLists.txt  main.cpp
NumberSeriesAssignment/: CMakeLists.txt  NumberSeries.cpp  NumberSeries.h  Timer.cpp  Timer.h  main.cpp  number_series.cpp  number_series.h  series_wrapper.cpp  series_wrapper.h
PIMPL/: CMakeLists.txt  Car.cpp  Car.h  main.cpp
Session1/: CMakeLists.txt  main.cpp
Session2/: CMakeLists.txt  benchmark.cpp  benchmark.h  endianness.cpp  endianness.h  main.cpp  max.cpp  max.h  rng.cpp  rng.h  sizes_ranges.cpp  sizes_ranges.h  timer.cpp  timer.h
Session3/polygon/: polygon.cpp  polygon.hpp  test_polygon.cpp
Session3/wordle/: CMakeLists.txt  filter.cpp  filter.h  js_parser.cpp  js_parser.h  main.cpp  search_word.cpp  search_word.h  token.cpp  token.h
Session4/polyline/: CMakeLists.txt  main.cpp  point.cpp  point.h  polyline.cpp  polyline.h
Session5/: Base.cpp  Base.h  CMakeLists.txt  Derived.h  Timer.cpp  Timer.h  main.cpp
Session5/calculator/: calculator.hpp  (+1 more)
Session6/: CMakeLists.txt  Visitor.cpp  Visitor.h  calculator.hpp  term_t.cpp
Session7/: CMakeLists.txt  main.cpp
(+10 files in other folders)
